--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^67.0.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.6",
